@@ -85,8 +85,8 @@ For Debian 3.0:
 
 <h3>Requirements</h3>
 
-   <p>You need the following packages to compile Lilypond on Windows (ie,
-for Cygwin).
+   <p>You need the following packages to compile Lilypond for Windows
+(ie, for Cygwin).
 
      <dl>
 <dt><code>The GNU + Cygnus tools, 1.3.10 or newer.</code>
@@ -103,33 +103,23 @@ Share your experiences on lilypond-devel@gnu.org.
 
  Cross compiling for Windows on a GNU/Linux box is done with
 mknetrel.  Get it from:
-<blockquote>
-     <pre>               cvs -d:pserver:anoncvs@sources.redhat.com:/cvs/cygwin-apps co mknetrel
-          </pre>
-        </blockquote>
+<pre>
+        cvs -d:pserver:anoncvs@sources.redhat.com:/cvs/cygwin-apps co mknetrel
+</pre>
 
 <p>Setup a binary Cygwin environment.  There is a bare bones <a
 href="http://lilypond.org/cygwin/cyg-apt">cyg-apt</a> script that can
 set it up and help keep it up to date.
 
-<p>Create a Cygwin cross building
-environment, if you don't have it:
-Apply the
-<a href="http://lilypond.org/cygwin/mknetrel-cross-tools.patch">mknetrel-cross-tools patch</a>, and read <code>CROSS-TOOLS</code>.
-<p>
-(Although mknetrel is well suited for this, the mknetrel maintainer
-does not want to include any cross building setup.)
+<p>Create a Cygwin cross building environment.
 
-   <p>You can also get <a
-href="http://lilypond.org/lilypond/cygwin/i386-gnu-linux-x-i686-pc-cygwin">precompiled
-binaries for GNU/Linux ix68</a>.
+<p>You can also get <a
+href="http://lilypond.org/debian/dists/unstable">precompiled toolchain
+gcc-i686-cygwin binaries for Debian GNU/Linux i386</a>.
 
 <h3>installation specifics</h3>
 
 <p>Installing LilyPond on Windows is similar to a unix installation,
 but needs a number of extra tricks.  All code for these tricks can be
 found in LilyPond's mknetrel build script in the source package
-directory <code>cygwin/mknetrel</code> and <a
-href="../../cygwin/mknetrel">mknetrel:extra/lilypond</a>.
-
-
+directory <code>cygwin/mknetrel</code>.
